# GUI_ROBOGait

./: CMakeLists.txt  README.md  README_en.md  main.cpp  main.qml  qml.qrc  utils.h
basura/: main.cpp  package.xml
basura/ddbb/: CMakeLists.txt
basura/ddbb/include/: NetworkDDBB.h  utils_database.h
basura/ddbb/qml/: ApplicationFlow.qml  ApplicationFlowForm.ui.qml  Guest.qml  GuestForm.ui.qml  Login.qml  LoginForm.ui.qml  MenuDoctor.ui.qml  RegisterPage.qml  SigninUser.ui.qml  SingIn.qml  SingInForm.ui.qml
basura/ddbb/qml/extras/: CustomToolBar.qml  CustomToolBarForm.ui.qml  ErrorRectangle.qml
basura/ddbb/src/: NetworkDDBB.cpp  database.cpp  main.cpp  utils_database.cpp
basura/intento1234/: stringHandler.h
basura/intento2/: CMakeLists.txt
basura/intento2/qml/: ApplicationFlow.qml  ApplicationFlowForm.ui.qml  Home.qml  Menu.qml  MenuForm.ui.qml  Teledirigido.qml  TeledirigidoForm.ui.qml
basura/intento2/src/: StringHandler.cpp
basura/lib/: rosnode.h
basura/proyectos/: main2.cpp  temporal_map.pgm
basura/pruebas_bridge/cliente/: CMakeLists.txt  Connection2Client.h  ImageClient.h  main.cpp
basura/pruebas_bridge/servidor/: CMakeLists.txt  ImageClient.h  ImageServer.h  cliente.cpp  image_client.cpp  image_server.cpp  servidor.cpp
basura/qml/: ApplicationFlow.qml  ApplicationFlowForm.ui.qml  IPForm.ui.qml
basura/server_upd_tcp/: main.cpp
basura/smooth trayectori/: INCREIBLE_filtro_puntos  INCREIBLE_filtro_puntos.cpp  bezier  bezier.cpp  bezier2.cpp  chaikin  chaikin.cpp  corner_cutting  ejecutar.sh  filtro_puntos  filtro_puntos.cpp  reducir_punto.cpp  suavizarTrayectoriaChaikin  suavizarTrayectoriaChaikin.cpp  suavizarTrayectoriaKalman  suavizarTrayectoriaKalman.cpp  suavizarTrayectoriaMediaMovil  suavizarTrayectoriaMediaMovil.cpp  trayectoria_corner_cutting  trayectoria_corner_cutting.cpp
basura/src/: utils.cpp
dev_tests/intento1234/: CMakeLists.txt  Main.qml  main.cpp
dev_tests/proyectos/: .gitignore  CMakeLists.txt  calcular_yaw.cpp  main.cpp  main2.cpp  (+1 more)
gui/: CMakeLists.txt  CMakeLists.txt.user.b2ab861  README.md
gui/android/: AndroidManifest.xml
gui/include/: MapInfo.h  NetworkDDBB.h  StringHandler.h  ToJson.h  cliente.h  database.h  utils.h  utils_ddbb.h
gui/qml/: ApplicationFlow.qml  ApplicationFlowForm.ui.qml  ConstantVariables.qml  Constants.qml  CreateMap.qml  CreateMapForm.ui.qml  CreateMapForm.ui.qml.autosave  CustomToolBar.qml  CustomToolBarForm.ui.qml  Home.qml  HomeForm.ui.qml  Ip.qml  IpForm.ui.qml  Joystick.qml  MainMenu.qml  MainMenuForm.ui.qml  ManualControl.qml  ManualControlForm.ui.qml  Map.qml  MapForm.ui.qml  MapPage.qml  MapPageForm.ui.qml  Menu.qml  MenuDoctor.qml  MenuDoctor.ui.qml  MenuDoctorForm.ui.qml  MenuForm.ui.qml  MenuForm.ui.qml.autosave  MenuPrincipal.qml  RegisterMap.qml  RegisterMapForm.ui.qml  RegisterPage.qml  RegisterPatient.qml  RegisterPatientForm.ui.qml  RobotConnection.qml  RobotConnectionForm.ui.qml  SavePage.qml  SavePageForm.ui.qml  SelectMap.qml  SelectMapForm.ui.qml  (+11 more)
gui/qml/extras/: Battery.qml  BatteryForm.ui.qml  BatteryForm.ui.qml.autosave  BoxImages.qml  BoxImagesForm.ui.qml  ConfigurationMenu.qml  CustomBottomBar.qml  CustomBottomBarForm.ui.qml  CustomToolBar.qml  CustomToolBarForm.ui.qml  DescriptionMapForm.ui.qml  DescriptionPatientForm.ui.qml  ErrorRectangle.qml  Guest.qml  GuestForm.ui.qml  ImageText.qml  InformationRectangle.qml  Joystick.qml  JoystickForm.ui.qml  Login.qml  LoginForm.ui.qml  Map.qml  Map.qml.autosave  MapForm.ui.qml  OrientationCircle.qml  OrientationCircleForm.ui.qml  PopUpInfoForm.ui.qml  SavePage.qml  SavePageForm.ui.qml  SignIn.qml  SignInForm.ui.qml
gui/src/: MapInfo.cpp  NetworkDDBB.cpp  StringHandler.cpp  ToJson.cpp  cliente.cpp  database.cpp  main.cpp  utils.cpp  utils_ddbb.cpp
gui/test/: CMakeLists.txt  utils_test.cpp
intento2/: CMakeLists.txt
lib/: utils.h
qml/: ApplicationFlow.qml  ApplicationFlowForm.qml  ApplicationFlowForm.ui.qml  ApplicationFlowForm.ui.qml.autosave  Colors.qml  Constants.qml  Home.qml  HomeForm.ui.qml  IP.qml  IPForm.ui.qml  MenuForm.ui.qml  StackView.ui.qml  main.qml
server/: .gitignore  CMakeLists.txt  README.MD  db_robogait.db  server_ddbb.py
server/include/: controlador_turtle.h
server/maps/: lab.pgm  lab.yaml  laboratorio#robótica.pgm  laboratorio#robótica.yaml  my_map.pgm  my_map.yaml  my_map_with_nav2.pgm  my_map_with_nav2.yaml  pasillo#ala#b.pgm  pasillo#ala#b.yaml  pasillo.pgm  pasillo.yaml  temporal_map.pgm  temporal_map.yaml  temporal_map1.yaml  triunfo.pgm  triunfo.yaml
server/node_manager/: CMakeLists.txt
server/node_manager/include/: NodeManager.h  utils.h
server/node_manager/launch_file/: cartographer_noRviz.launch.py
server/node_manager/src/: NodeManager.cpp  servidor.cpp  utils.cpp
server/src/: main.cpp  package.xml
server/src/include/: NodeManager.h  header.h  servidor.h  utils.h
server/src/interface_srv/: CMakeLists.txt  package.xml
server/src/interface_srv/srv/: GetRobotPosition.srv
server/src/node_manager/: CMakeLists.txt  README.md  main.cpp  package.xml
server/src/node_manager/include/: HandleMsg.h  NodeManager.h  ProcessController.h  header.h  servidor.h  toJson.h  utils.h
server/src/node_manager/launch_file/: controller_server.cpp  controller_server.hpp  nav2_params.yaml  nav_to_pose_path_launch.py
server/src/node_manager/param/: config.yaml  config_casa.yaml  config_robot.yaml  config_uni.yaml
server/src/node_manager/src/: HandleMsg.cpp  NodeManager.cpp  ProcessController.cpp  servidor.cpp  toJson.cpp  utils.cpp
server/src/src/: NodeManager.cpp  servidor.cpp  utils.cpp
server/src/tf_service/: CMakeLists.txt  package.xml
server/src/tf_service/src/: tf_service.cpp
server/tcp/: main.cpp  package.xml
server/tcp/include/: header.h  servidor.h  utils.h
server/tcp/src/: controlador_turtle.cpp  servidor.cpp  utils.cpp
server/tf_service/: CMakeLists.txt  main.cpp  package.xml
server/udp/: CMakeLists.txt  main.cpp  package.xml
server/udp/include/: servidor.h
server/udp/src/: servidor.cpp
src/: rosnode.cpp
test/: utils_test.cpp  utils_test.cpp.autosave
(+46 files in other folders)
