<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_service</name>
  <version>0.0.1</version>
  <description>The tf_service package</description>

  <!-- Dependencias de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

   <member_of_group>rosidl_interface_packages</member_of_group>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
</package>